--- a/workers/dockerfiles/Dockerfile.transcriptome
+++ b/workers/dockerfiles/Dockerfile.transcriptome
@@ -1,36 +1,49 @@
 FROM ubuntu:18.04
 
-RUN apt-get update -qq
-RUN apt-get install -y software-properties-common
-RUN add-apt-repository ppa:apt-fast/stable
-RUN apt-get update -qq
-RUN apt-get -y install apt-fast
-
 # Prevent tzdata from prompting us for a timezone and hanging the build.
 ENV DEBIAN_FRONTEND=noninteractive
 
-RUN \
-  apt-fast update -qq && \
-  apt-fast install -y \
+# Source: https://github.com/thisbejim/Pyrebase/issues/87#issuecomment-354452082
+# For whatever reason this worked and 'en_US.UTF-8' did not.
+ENV LANG C.UTF-8
+
+RUN apt-get update -qq
+RUN apt-get install -y software-properties-common
+RUN add-apt-repository ppa:apt-fast/stable
+RUN add-apt-repository ppa:deadsnakes/ppa
+RUN add-apt-repository ppa:savoury1/llvm-defaults-10
+
+RUN apt-get update -qq
+RUN apt-get -y install apt-fast
+
+RUN apt-fast update -qq && apt-fast install -y \
+  build-essential \
+  curl \
+  cython3 \
   ed \
   git \
-  python3 \
-  python3-pip \
   libcurl4-openssl-dev \
+  libfreetype6-dev \
   libpq-dev \
-  zlib1g-dev \
-  curl \
-  wget && \
-  rm -rf /var/lib/apt/lists/*
+  llvm-10-dev \
+  pkg-config \
+  python3-pip \
+  python3.8 \
+  python3.8-dev \
+  wget \
+  zlib1g-dev
+
+RUN rm CRAN.gpg
+RUN apt-get clean; rm -rf /var/lib/apt/lists/*
+RUN ln -s /usr/bin/llvm-config-10 /usr/bin/llvm-config
+RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 1
 
 RUN groupadd user && useradd --create-home --home-dir /home/user -g user user
 WORKDIR /home/user
 
 # It's annoying that this can only be installed via git.
 RUN git clone https://github.com/deweylab/RSEM.git
-
 RUN cd RSEM && make install
-
 RUN rm -rf RSEM
 
 # Install Salmon
@@ -48,36 +61,26 @@ ENV SALMON_VERSION 0.13.1
 # ENV SALMON_VERSION 0.10.2
 
 RUN wget https://github.com/COMBINE-lab/salmon/releases/download/v${SALMON_VERSION}/Salmon-${SALMON_VERSION}_linux_x86_64.tar.gz
-
 RUN tar -xzf Salmon-${SALMON_VERSION}_linux_x86_64.tar.gz
 
 # Salmon can extract to a different directory than the name of the tar file.
 RUN cp `tar -tzf Salmon-${SALMON_VERSION}_linux_x86_64.tar.gz | head -1 | cut -f1 -d"/"`/bin/salmon /usr/local/bin
-
 RUN cp `tar -tzf Salmon-${SALMON_VERSION}_linux_x86_64.tar.gz | head -1 | cut -f1 -d"/"`/lib/* /usr/local/lib
 
 RUN rm -r Salmon*
 # End Salmon installation.
 
-# Source: https://github.com/thisbejim/Pyrebase/issues/87#issuecomment-354452082
-# For whatever reason this worked and 'en_US.UTF-8' did not.
-ENV LANG C.UTF-8
-
 RUN pip3 install --upgrade pip
-
-COPY config/ config/
-COPY .boto .boto
+RUN pip3 install numpy
 
 COPY workers/data_refinery_workers/processors/requirements.txt .
-
-RUN  pip3 install -r requirements.txt
-
-COPY common/dist/data-refinery-common-* common/
+RUN pip3 install --ignore-installed -r requirements.txt
 
 # Get the latest version from the dist directory.
+COPY common/dist/data-refinery-common-* common/
 RUN pip3 install common/$(ls common -1 | sort --version-sort | tail -1)
 
-# Clear our the pip3 cache
+# Clear out the pip3 cache.
 RUN rm -rf /root/.cache
 
 ARG SYSTEM_VERSION
@@ -86,6 +89,8 @@ ENV SYSTEM_VERSION $SYSTEM_VERSION
 
 USER user
 
+COPY .boto .boto
+COPY config/ config/
 COPY workers/ .
 
 ENTRYPOINT []
