Rework Docker image build scripts
  - Isolate local/staging Docker registries
  - Change `-d`/`-r` deployment flags meaning
  - Introduce prepare_image.sh `-u` flag
  - Introduce update_my_docker_images.sh `-b`/`-x` flags
  - Unify `source` operation syntax
  - Reformat .sh files
  - Standardize docker command options format

--- a/common/dockerfiles/Dockerfile.common_tests
+++ b/common/dockerfiles/Dockerfile.common_tests
@@ -1,4 +1,5 @@
-FROM ccdlstaging/dr_base:latest
+ARG DOCKERHUB_REPO
+FROM $DOCKERHUB_REPO/dr_base:latest
 
 # Fail in case of an error at any stage in the pipe.
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
